# sbpy-email-wrapper

./: README.md  pyproject.toml  setup.py
build_package/: Dockerfile  build.sh
sbpyEmailWrapper/: __init__.py  errors.py  wrapper.py
sbpyEmailWrapper/services/: aws_ses.py
tests/: test_instance_creation.py
